--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,11 +1,12 @@
 plugins {
 	id 'java'
+	id 'application'
 	id 'org.springframework.boot' version '3.0.6'
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'pl.com'
-version = '0.0.1-SNAPSHOT'
+version = '1'
 sourceCompatibility = '17'
 
 repositories {
@@ -15,6 +16,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+bootJar {
+	archiveBaseName = 'school-system'
+	mainClassName = 'pl.com.schoolsystem.SchoolSystemApplication'
 }
 
 tasks.named('test') {
