--- a/server/build.gradle
+++ b/server/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'application'
 	id 'org.springframework.boot' version '3.0.6'
 	id 'io.spring.dependency-management' version '1.1.0'
+	id 'com.github.sherter.google-java-format' version '0.9'
 }
 
 group = 'pl.com'
@@ -21,6 +22,10 @@ dependencies {
 	runtimeOnly "org.postgresql:postgresql"
 }
 
+googleJavaFormat {
+	toolVersion = "1.1"
+}
+
 bootJar {
 	archiveBaseName = 'school-system'
 	mainClassName = 'pl.com.schoolsystem.SchoolSystemApplication'
@@ -28,4 +33,5 @@ bootJar {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	dependsOn verifyGoogleJavaFormat
 }
