--- a/server/build.gradle
+++ b/server/build.gradle
@@ -16,13 +16,24 @@ repositories {
 
 dependencies {
 	def archUnitVersion = '1.0.1'
+	def lombokVersion = '1.18.24'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation "org.flywaydb:flyway-core"
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation "com.tngtech.archunit:archunit-junit5:${archUnitVersion}"
 
+	compileOnly "org.projectlombok:lombok:${lombokVersion}"
+
 	runtimeOnly "org.postgresql:postgresql"
+
+	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+
+	testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+
+	testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
 }
 
 googleJavaFormat {
