--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:postgresql://postgres:5432/schoolsystem
 spring.datasource.username=schoolsystem
 spring.datasource.password=schoolsystem
 spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=validate
