--- a/server/build.gradle
+++ b/server/build.gradle
@@ -17,11 +17,13 @@ repositories {
 dependencies {
 	def archUnitVersion = '1.0.1'
 	def lombokVersion = '1.18.24'
+	def jwtVersion = '0.11.2'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation "org.springframework.boot:spring-boot-starter-security"
 	implementation "org.flywaydb:flyway-core"
+	implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation "com.tngtech.archunit:archunit-junit5:${archUnitVersion}"
@@ -29,6 +31,8 @@ dependencies {
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
 
 	runtimeOnly "org.postgresql:postgresql"
+	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
+	runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"
 
 	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
