--- a/server/build.gradle
+++ b/server/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-security"
 	implementation "org.flywaydb:flyway-core"
 	implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
+	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation "com.tngtech.archunit:archunit-junit5:${archUnitVersion}"
