--- a/server/build.gradle
+++ b/server/build.gradle
@@ -16,17 +16,35 @@ repositories {
 
 dependencies {
 	def archUnitVersion = '1.0.1'
+	def lombokVersion = '1.18.24'
+	def jwtVersion = '0.11.2'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation "org.springframework.boot:spring-boot-starter-security"
+	implementation "org.flywaydb:flyway-core"
+	implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
+	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+	implementation "org.hibernate.validator:hibernate-validator"
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation "com.tngtech.archunit:archunit-junit5:${archUnitVersion}"
 
+	compileOnly "org.projectlombok:lombok:${lombokVersion}"
+
 	runtimeOnly "org.postgresql:postgresql"
+	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
+	runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"
+
+	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+
+	testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+
+	testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
 }
 
 googleJavaFormat {
-	toolVersion = "1.1"
+	toolVersion = '1.12.0'
 }
 
 bootJar {
