--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,13 @@ services:
     ports:
       - "127.0.0.1:8080:8080"
       - "127.0.0.1:8000:8000"
+  mailhog:
+    image: mailhog/mailhog:v1.0.1
+    container_name: mailhog
+    ports:
+      - '1025:1025'
+      - '8025:8025'
+    restart: unless-stopped
 
 volumes:
   postgres_data_ss:
