--- a/server/build.gradle
+++ b/server/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	implementation "org.hibernate.validator:hibernate-validator"
 	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
+	implementation "org.springframework.boot:spring-boot-starter-mail"
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation "com.tngtech.archunit:archunit-junit5:${archUnitVersion}"
