--- a/server/build.gradle
+++ b/server/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	def lombokVersion = '1.18.24'
 	def jwtVersion = '0.11.2'
 	def mapstructVersion = "1.5.5.Final"
+	def vavrVersion = "0.10.4"
 
 	def testContainersVersion = '1.17.3'
 	def archUnitVersion = '1.0.1'
@@ -33,6 +34,7 @@ dependencies {
 	implementation "org.hibernate.validator:hibernate-validator"
 	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
 	implementation "org.springframework.boot:spring-boot-starter-mail"
+	implementation "io.vavr:vavr:${vavrVersion}"
 
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
 
