--- a/server/build.gradle
+++ b/server/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 	def lombokVersion = '1.18.24'
 	def jwtVersion = '0.11.2'
 	def mapstructVersion = "1.5.5.Final"
-	def vavrVersion = "1.0.0-alpha-4"
+	def vavrVersion = "0.10.4"
 
 	def testContainersVersion = '1.17.3'
 	def archUnitVersion = '1.0.1'
