--- a/server/build.gradle
+++ b/server/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'org.springframework.boot' version '3.0.6'
 	id 'io.spring.dependency-management' version '1.1.0'
 	id 'com.github.sherter.google-java-format' version '0.9'
+	id("org.springdoc.openapi-gradle-plugin") version "1.6.0"
 }
 
 group = 'pl.com'
@@ -15,7 +16,7 @@ repositories {
 }
 
 dependencies {
-
+	def springDocVersion = '2.1.0'
 	def lombokVersion = '1.18.24'
 	def jwtVersion = '0.11.2'
 	def mapstructVersion = "1.5.5.Final"
@@ -30,13 +31,15 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-security"
 	implementation "org.flywaydb:flyway-core"
 	implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
-	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 	implementation "org.hibernate.validator:hibernate-validator"
 	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
 	implementation "org.springframework.boot:spring-boot-starter-mail"
 	implementation "io.vavr:vavr:${vavrVersion}"
 
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
+
+	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springDocVersion}"
 
 	runtimeOnly "org.postgresql:postgresql"
 	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
