--- a/server/build.gradle
+++ b/server/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	def jwtVersion = '0.11.2'
 	def mapstructVersion = "1.5.5.Final"
 	def vavrVersion = "0.10.4"
+	def hibernateMetamodelVersion = '6.1.7.Final'
 
 	def testContainersVersion = '1.17.3'
 	def archUnitVersion = '1.0.1'
@@ -37,6 +38,9 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-mail"
 	implementation "io.vavr:vavr:${vavrVersion}"
 
+	implementation group: 'jakarta.xml.bind', name: 'jakarta.xml.bind-api', version: '4.0.0'
+
+
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
 
 	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springDocVersion}"
@@ -48,6 +52,7 @@ dependencies {
 	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
 	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+	annotationProcessor "org.hibernate:hibernate-jpamodelgen:${hibernateMetamodelVersion}"
 
 	testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
